- add view.html and mapping controller

--- a/src/main/resources/templates/boards/list.html
+++ b/src/main/resources/templates/boards/list.html
@@ -90,9 +90,8 @@
 			
 			var msg = [[${msg}]];
 			
-			
 			if(msg =='success') {
-				alert("정상적으로 처리되었습니다.");
+				alert("saved.");
 				var stateObj = { msg: "" };
 			}
 		});
