--- a/src/main/resources/templates/layout/layout1.html
+++ b/src/main/resources/templates/layout/layout1.html
@@ -20,7 +20,7 @@
 
 	<div class="page-header">
 		<h1>
-			Boot06 Project <small>for Spring MVC + JPA</small>
+			blogService Project
 		</h1>
 	</div>
 
